--- a/StockTickerApp/package.json
+++ b/StockTickerApp/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "StockTickerApp",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "3.2.6",
-    "ejs": "*"
-  }
+	"name": "StockTickerApp",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": 
+	{
+		"start": "node app.js"
+	},
+
+	"dependencies": 
+	{
+		"express": "3.2.6",
+		"ejs": "*",
+		"mongoose": "~3.8.1",
+		"morgan": "~1.0.0",
+		"body-parser": "~1.0.0",
+		"cookie-parser": "~1.0.0",
+		"express-session": "~1.0.0"
+	}
 }
